--- a/README.Rmd
+++ b/README.Rmd
@@ -18,36 +18,36 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of crbiodiversity is to ...
+The goal of crbiodiversity is to retrieve biodiversity data of Costa Rica
 
 ## Installation
 
 You can install the development version of crbiodiversity like so:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+# install.packages("devtools")
+devtools::install_github("ManuelSpinola/crbiodiversity")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example how to use the package:
 
 ```{r example}
+library(tidyverse)
+library(spocc)
+library(sf)
 library(crbiodiversity)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
+```{r}
+get_locations("Agalychnis callidryas")
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
 
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
+```{r, echo = FALSE}
 plot(pressure)
 ```
 
