--- a/README.Rmd
+++ b/README.Rmd
@@ -18,15 +18,26 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of crbiodiversity is to retrieve biodiversity data of Costa Rica
+The goal of crbiodiversity is to searching and retrieving biodiversity data of Costa Rica
 
 ## Installation
 
-You can install the development version of crbiodiversity like so:
+You can install the development version of **crbiodiversity** like so:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("ManuelSpinola/crbiodiversity")
+```
+Also you need to install the following packages:
+
+``` r
+# install.packages("devtools")
+devtools::install_github("ManuelSpinola/crgeo")
+```
+
+``` r
+# install.packages("devtools")
+devtools::install_github("ManuelSpinola/crgrids")
 ```
 
 ## Example
